--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Velkommen til #{title}
+  h2 Her kan du købe brugte IT-bøger til en billig pris.
+  
+  div.centered-links
+    a.computersprog.button(href="/computersprog") computersprog
+    a.webapplikationer.button(href="/webapplikationer") webapplikationer
+    a.computersprog1.button(href="/computersprog1") computersprog1
+    a.webapplikationer1.button(href="/webapplikationer1") webapplikationer1
+    a.opretwebbog.button(href="/opretwebbog") opretwebbog
+    a.bibleverse.button(href="/bibleverse") bibelvers 
