--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,30 @@
-doctype html
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    header
+      nav
+        ul
+          li
+            a.ITbog-genbrugsbutik(href='/') ITbog-genbrugsbutik
+          li
+            a.button(href='/computersprog') computersprog 
+          li
+            a.button(href='/webapplikationer') webapplikationer
+          li
+            a.button(href='/computersprog1') computersprog1
+          li
+            a.button(href='/webapplikationer1') webapplikationer1
+          li
+            a.button(href='/opretwebbog') opretwebbog
+          li
+            a.button(href='/bibleverse') bibelvers
+          
+          
+
   body
     block content
+
+
+  footer
+    p Copyright © 2023 ITbog-genbrugsbutik
